--- a/templates/consul.conf.j2
+++ b/templates/consul.conf.j2
@@ -7,7 +7,11 @@ stop on runlevel [016]
 script
 
 # Make sure to use all our CPUs, because Consul can block a scheduler thread
-
+GOMAXPROCS=`nproc`
+if [$GOMAXPROCS -eq 1]
+  then
+    GOMAXPROCS=2
+fi
 {% if consul_dynamic_bind %}
 # Get the public IP
 BIND=`ifconfig eth0 | grep "inet addr" | awk '{ print substr($2,6) }'`
@@ -18,7 +22,7 @@ BIND=`ifconfig eth0 | grep "inet addr" | awk '{ print substr($2,6) }'`
 CLIENT_BIND=`ifconfig eth0 | grep "inet addr" | awk '{ print substr($2,6) }'`
 {% endif %}
 
-sudo setcap CAP_NET_BIND_SERVICE=+eip {{ consul_home }}/bin/consul; exec sudo -u {{ consul_user }} -g {{ consul_group }} GOMAXPROCS=`nproc` {{ consul_home }}/bin/consul agent \
+sudo setcap CAP_NET_BIND_SERVICE=+eip {{ consul_home }}/bin/consul; exec sudo -u {{ consul_user }} -g {{ consul_group }} GOMAXPROCS=$GOMAXPROCS {{ consul_home }}/bin/consul agent \
 {% if consul_dynamic_bind %}
   -bind=$BIND \
 {% endif %}
