set minimum gomaxprocs to 2

--- a/templates/consul.conf.j2
+++ b/templates/consul.conf.j2
@@ -8,10 +8,11 @@ script
 
 # Make sure to use all our CPUs, because Consul can block a scheduler thread
 GOMAXPROCS=`nproc`
-if [$GOMAXPROCS -eq 1]
-  then
-    GOMAXPROCS=2
+if [ "$GOMAXPROCS" -lt 2 ]
+then
+  GOMAXPROCS=2
 fi
+
 {% if consul_dynamic_bind %}
 # Get the public IP
 BIND=`ifconfig eth0 | grep "inet addr" | awk '{ print substr($2,6) }'`
