do not supply start_join servers on local env

--- a/templates/consul.json.j2
+++ b/templates/consul.json.j2
@@ -2,7 +2,7 @@
 {% if consul_is_ui == true %}
   "ui_dir": "{{ consul_home }}/dist",
 {% endif %}
-{% if consul_join_at_start is defined and consul_join_at_start %}
+{% if consul_join_at_start is defined and consul_join_at_start and (env != "local") %}
 "start_join": [ {% for server in groups['tag_Class_config'] if hostvars[server]['ec2_tag_Env'] == env %}"{{ hostvars[server]['ec2_private_ip_address'] }}"{% if not loop.last %},{% endif %}{% endfor %} ],
 {% endif %}
 {% if consul_disable_remote_exec is defined and consul_disable_remote_exec %}
